syntax = "proto3";

package inventory;

service InventoryService {
    rpc FindOne (InventoryByItemId) returns (Inventory);
}

message InventoryByItemId {
    string id = 1;
}

message Inventory {
    string id = 1;
    int32 quantity = 2;
}