syntax = "proto3";

package inventory;

service InventoryController {
    rpc FindOne (InventoryByItemId) returns (ResponseDataInventory);
    rpc PostOne (CreateInventoryDto) returns (ResponseDataInventory);
    rpc DeleteOne (InventoryByItemId) returns (ResponseDataDeleted);
    rpc UpdateOne (CreateInventoryDto) returns (ResponseDataInventory);
}

message InventoryByItemId {
    string id = 1;
}

message Inventory {
    int32 quantity = 1;
}

message CreateInventoryDto {
    string id = 1;
    int32 quantity = 2;
}

message DeleteResponse {
    string message = 1;
}

message ResponseDataInventory {
    string status = 1;
    string message = 2;
    oneof response {
        Inventory data = 3;
        string error = 4;
    }
}

message ResponseDataDeleted {
    string status = 1;
    string message = 2;
    oneof response {
        DeleteResponse data = 3;
        string error = 4;
    }
}